--- a/request/package.json
+++ b/request/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "yarn clean && tsc",
-    "pub": "yarn build && npm version patch && npm publish --access public"
+    "pub": "yarn build && npm version patch"
   },
   "license": "MIT",
   "devDependencies": {
