--- a/logger/package.json
+++ b/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigoncloud/logger",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Wrapper for winston logger",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -10,11 +10,12 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "yarn clean && tsc",
-    "publish": "git add . && git commit -m \"updates\" && yarn build && npm version patch && npm publish --access public"
+    "pub": "git add . && git commit -m \"updates\" && yarn build && npm version patch && npm publish --access public"
   },
   "license": "MIT",
   "dependencies": {
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
